styles fix visibility

--- a/client/src/components/places/Places.module.css
+++ b/client/src/components/places/Places.module.css
@@ -1,6 +1,8 @@
 .wrapper{
     width: 40%;
-    margin: 3%;
+    min-width: 300px;
+    margin-bottom: 4%;
+    margin-right: 4%;
 }
 .wrapper img{
     max-height: 200px;
