--- a/client/src/views/place/PlaceView.module.css
+++ b/client/src/views/place/PlaceView.module.css
@@ -2,15 +2,20 @@
     width: 100%;
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
+    margin-top: 3%;
 }
 .filters{
     width: 20%;
-    background-color: aliceblue;
+    display: flex;
+    min-width: 50px;
+    background-color: none;
 }
 .placesWrap{
    width: 80%;
    display: flex;
-   flex-flow: column nowrap;
+   flex-flow: row wrap;
    align-items: center;
+   justify-content: center;
 
 }
